chore: apply OpenRewrite UpgradeToJava21 source changes